[package]
name = "dlg"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.0"
tempfile = { version = "3", optional = true }
zeroize = { version = "1.1.1", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
shell-words = "1.1.0"
thiserror = "1.0.40"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
dialoguer = "0.9"
